[build-system]
# 使用 setuptools 作为构建后端，兼容你现有的 setup.py 习惯
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# 这里用 setuptools 里那套 name，比 "ace-step" 更贴近你已有的配置
name = "ace_step"
version = "0.2.0"
description = "ACE Step: A Step Towards Music Generation Foundation Model"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "ACE Studio, StepFun AI" },
]

license = { text = "Apache 2.0" }

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
]

# 依赖从 requirements.txt 搬过来，去掉重复和版本明显不合理的地方
dependencies = [
    "ctransformers[cuda]>=0.2.27",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "datasets==3.4.1",
    "diffusers>=0.33.0",
    "gradio[mcp]==5.47.2",
    "librosa==0.11.0",
    "loguru==0.7.3",
    "matplotlib==3.10.1",
    "numpy",
    "pypinyin==0.53.0",
    "pytorch_lightning==2.5.1",
    "soundfile==0.13.1",
    "tqdm",
    "transformers==4.50.0",
    "py3langid==0.3.0",
    "hangul-romanize==0.1.0",
    "num2words==0.5.14",
    "spacy==3.8.4",
    "accelerate==1.6.0",
    "cutlet",
    "fugashi[unidic-lite]",
    "click",
    # 下面三个在 extras 里也有，“train” 组会额外再加一遍；这里保留主依赖即可
    "peft",
    "tensorboard",
    "tensorboardX",
    "torchcodec>=0.10.0",
]

# 这是关键：定义命令行脚本，等价于 setup.py 的 entry_points.console_scripts
[project.scripts]
acestep = "acestep.gui:main"

[project.optional-dependencies]
# 对应 setup.py 里的 extras_require={"train": [...]}
train = [
  "peft",
  "tensorboard",
  "tensorboardX",
]

[tool.setuptools]
# 使用 find_namespace_packages() 的等价配置
packages = { find = { namespaces = true } }

[tool.setuptools.package-data]
# 对应 setup.py 里的 package_data
"acestep.models.lyrics_utils" = ["vocab.json"]
